Correcting alignments in desktop mode

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,33 +1,34 @@
-footer{
-    display: flex;
-    flex-direction: column;
-    padding: 35px 20px;
-    justify-content: space-between;
-    background-color: var(--reservia-background-color);
+footer {
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+  padding: 35px 20px;
+  justify-content: space-between;
+  background-color: var(--reservia-background-color);
 }
 
 footer ul {
-    padding: 0px;
-    margin-bottom: 15px;
+  padding: 0px;
+  margin-bottom: 15px;
 }
 
 footer ul li {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 footer ul li:first {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
-footer li a{
-    color:black;
+footer li a {
+  color: black;
 }
 
 /*---- Responsive ----*/
 /*---- Tablet version ----*/
 
-@media (min-width: 768px){
-    footer{
-        flex-direction: row;
-    }
+@media (min-width: 768px) {
+  footer {
+    flex-direction: row;
   }
+}
