--- a/styles/header.css
+++ b/styles/header.css
@@ -45,7 +45,7 @@ nav a:hover {
   header {
     display: flex;
     justify-content: space-between;
-    padding: 0px 20px;
+    padding: 0px 15px;
   }
   h1 img {
     position: unset;
